k8s/staging/spring-petclinic-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: trunng5703/app-demo:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: staging
spec:
  selector:
    app: spring-petclinic
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spring-petclinic-policy
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: spring-petclinic
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: staging
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgresql
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: staging
    ports:
    - protocol: TCP
      port: 5432
